-Added all layers to mountain -Added mushroom -Added parallax to everything -Added planets -Fixed bg stretch -Organization

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 .bg-segment { 
   width: 100%;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 .centered-img { 
   width: 100%;
   position: absolute;
+  display: block;
   transform: translate(0, -50%);
 }
 
